Swagger spec work
